# agents-a2a

./: .gitignore  A2A_SERVER_PATTERN.md  CLAUDE.md  README.md  start_all_agents.sh  stop_all_agents.sh  test_agents.py
a2a-estudo/: README.md  a2a-config.json  agent.py
a2a-python/src/a2a/server/tasks/: database_task_store.py
marvin/: __main__.py  agent_executor.py  marvin_control.sh  marvin_daemon.py  pyproject.toml  server.py
turso/: .env.example  CHANGELOG.md  Dockerfile  README.md  README_A2A.md  __init__.py  agent.py  agent_executor.py  app_old_fastapi.py.bak  index.js  local.db-info  local.db-shm  local.db-wal  pyproject.toml  run.sh  server.py  start_turso.sh  test-turso-cloud.js  test.js  test_a2a_integration.py
turso/.claude-flow/metrics/: performance.json  task-metrics.json
turso/python/: .env.openai  README.md  config.py  main.py  models.py  pyproject.toml  test_agent.py
turso/python/.claude-flow/metrics/: performance.json  task-metrics.json
