[project]
name = "a2a-samples-marvin"
version = "0.1.0"
description = "Currency conversion using A2A and Marvin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk",
    "marvin>=3.0.0",
]

[tool.uv.sources]
a2a-sdk = { path = "../a2a-python" }

[tool.ruff.lint]
extend-select = ["I", "UP"]
