[project]
name = "a2a-turso-agent"
version = "2.0.0"
description = "Agente A2A para persistência de dados com Turso Database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk",
    "libsql-experimental>=0.0.34",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
a2a-sdk = { path = "../a2a-python" }

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"